# uconsole-sleep

./: Cargo.toml  README.md
.github/workflows/: release.yml
etc/systemd/: uconsole-sleep.service
etc/uconsole-sleep/: config.default
src/: args.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  power_mode.rs
src/hardware/: backlight.rs  cpu.rs  drm_panel.rs  framebuffer.rs  internal_kb.rs  mod.rs  power_key.rs  rf.rs  wifi.rs
