[package]
name = "uconsole-sleep"
version = "0.1.6"
edition = "2024"
authors = ["lazywalker"]
description = "uConsole sleep service "
license = "GPL-3.0"
repository = "https://github.com/lazywalker/uconsole-sleep"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
nix = { version = "0.30", features = ["inotify", "event"] }
libc = "0.2"
log = "0.4"
env_logger = { version = "0.11", default-features = false }

[package.metadata.deb]
maintainer = "lazywalker <lazywalkerz@gmail.com>"
copyright = "2025, lazywalker <lazywalkerz@gmail.com>"
license-file = ["LICENSE"]
extended-description = """\
Monitor the power key and toggle power-saving mode on short press.
"""
section = "utils"
priority = "optional"
assets = [
	# `target/release` path is special and will be replaced by cargo-deb at build time
	["target/release/uconsole-sleep", "usr/bin/", "755"],
	["etc/uconsole-sleep/config.default", "etc/uconsole-sleep/config", "644"],
]
maintainer-scripts = "etc/systemd/"
systemd-units = { enable = true }